<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    tools:context=".SelectActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="731dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/selectView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.25"
            android:src="@drawable/cover2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/find_ramen"
            android:textAlignment="textEnd"
            android:textColor="#3A3A3A"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:text="@string/search_title"
            android:textAlignment="textEnd"
            android:textColor="#3A3A3A"
            android:textSize="35sp"
            />

        <TextView
            android:id="@+id/search_area_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="200dp"
            android:text="@string/search_area"
            android:textAlignment="textEnd"
            android:textColor="#3A3A3A"
            android:textSize="35sp" />

        <Spinner
            android:id="@+id/route_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="260dp"
            android:dropDownVerticalOffset="47sp" />

        <TextView
            android:id="@+id/search_line_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="350dp"
            android:text="@string/search_line"
            android:textAlignment="textEnd"
            android:textColor="#3A3A3A"
            android:textSize="35sp" />

        <Spinner
            android:id="@+id/station_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="410dp"
            android:dropDownVerticalOffset="47sp" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="550dp"
            android:backgroundTint="#A87E3F"
            android:text="@string/search_button_str"
            android:textSize="30sp"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>